iicio de sesion, mitad...

--- a/Proyecto numero 1/index.html
+++ b/Proyecto numero 1/index.html
@@ -29,7 +29,7 @@
                         <a href="#">Mi lista</a>
                     </li>
                     <li>
-                        <a class="btn-primary" href="./templates/singup.html">
+                        <a class="btn-primary" href="./templates/inicio-sesion.html">
                             <i class="fas fa-sign-in-alt"></i>
                             <span class="login-text">
                                 Iniciar sesion
